loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:4: error: value à is not a member of Int
  for (pas <- 1 à 5){
                ^