loopdowhile.Poucet1.scala.code
var Biscuits = 0
while (!sortieTrouvee()){
  Biscuits=0
  for (pas <- 1 à 5){
    avance()
    if (estSurBiscuit) {
      Biscuits+=1
    }
  }
  if (Biscuits>=3){
    gauche()
  }else{
    droite()
  }
}
avance()